redactable/tests/ui/sensitive_display_legacy_formatting_without_policy.rs
use redactable::SensitiveDisplay;

#[derive(SensitiveDisplay)]
#[error("{value}")]
struct Event {
    #[redactable(legacy_formatting)]
    value: String,
}

fn main() {}
